# Pseudolang

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  Pseudolang.md  SECURITY.md  build.rs  build_release.sh  readme.md  wapm.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
examples/: binary_search.pc  boolean_test.psl  bubble_sort.psl  example_function.psl  hello_world.pc
installer/: LICENSE  pseudolang.nsi
src/: core.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  wasi.rs  wasm.rs
src/tests/: mod.rs
