# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "fplc"
version = "0.9.501"
edition = "2021"
description = "A pseudolang interpreter written in Rust"
repository = "https://github.com/PseudoLang-Software-Foundation/Pseudolang"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[package.metadata.wasm-pack]
profile.release.wasm-opt = ["-Oz"]

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
rand = "0.8.5"
chrono = { version = "0.4", optional = true }
chrono-tz = { version = "0.10.0", optional = true }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = "0.4"
chrono-tz = "0.10.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }
wasi = "0.11"

[features]
default = ["native"]
native = ["chrono", "chrono-tz"]
wasm = []
wasi = []
bindgen = ["wasm-bindgen", "console_error_panic_hook"]
